[package]
name = "octoren"
version = "0.1.0"
authors = ["Omkar Mohanty <franzohouser@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
egui-winit = "0.26.2"
egui-wgpu = "0.26.2"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.14.3", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0.80"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
